tests/expectations/compiler/dynamic_dispatch/dynamic_call_wrong_type_arg_fail.out
Error [ETYC0372117]: Expected `field` or `identifier` but type `u64` was found.
    --> compiler-test:4:48
     |
   4 |         let result: u64 = _dynamic_call::[u64](target, net, func);
     |                                                ^^^^^^
